[gd_scene load_steps=17 format=2]

[ext_resource path="res://resources/tile_sets/main.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/game/GridManager.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/PlayerController.gd" type="Script" id=3]
[ext_resource path="res://resources/shaders/diamond_dissolve.shader" type="Shader" id=4]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=5]
[ext_resource path="res://scenes/game/DungeonGenerator.gd" type="Script" id=6]
[ext_resource path="res://scenes/game/TurnLoop.gd" type="Script" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/progress = 0.935
shader_param/diamondPixelSize = 10.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 10.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 10.0

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 10.0

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 4 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 10.0

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 4 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 10.0

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 4 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 10.0

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 4 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 10.0

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 4 )
shader_param/progress = 1.0
shader_param/diamondPixelSize = 10.0

[node name="Game" type="Node2D"]
script = ExtResource( 5 )

[node name="UI" type="Control" parent="."]
anchor_right = 0.113
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI"]
margin_top = -10.0
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0.137255, 0.129412, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridManager" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="UIGrid" type="TileMap" parent="GridManager"]
modulate = Color( 0.94902, 0.94902, 0.941176, 1 )
position = Vector2( 168, 24 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 1, 65536, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 196608, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 196608, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 65537, 65536, 1, 1, 65542, 1, 1, 65548, 1, 1, 65554, 1, 1, 131072, 1, 1, 131078, 1, 1, 131084, 1, 1, 131090, 1, 1, 196608, 1, 1, 196614, 1, 1, 196620, 1, 1, 196626, 1, 1, 262144, 1, 1, 262150, 1, 1, 262156, 1, 1, 262162, 1, 1, 327680, 1, 1, 327686, 1, 1, 327692, 1, 1, 327698, 1, 1, 393216, 1, 131072, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 196610, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 196610, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 131073, 458752, 1, 1, 458758, 1, 1, 458764, 1, 1, 458770, 1, 1, 524288, 1, 1, 524294, 1, 1, 524300, 1, 1, 524306, 1, 1, 589824, 1, 1, 589830, 1, 1, 589836, 1, 1, 589842, 1, 1, 655360, 1, 1, 655366, 1, 1, 655372, 1, 1, 655378, 1, 1, 720896, 1, 1, 720902, 1, 1, 720908, 1, 1, 720914, 1, 1, 786432, 1, 131072, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 196610, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 196610, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 131073, 851968, 1, 1, 851974, 1, 1, 851980, 1, 1, 851986, 1, 1, 917504, 1, 1, 917510, 1, 1, 917516, 1, 1, 917522, 1, 1, 983040, 1, 1, 983046, 1, 1, 983052, 1, 1, 983058, 1, 1, 1048576, 1, 1, 1048582, 1, 1, 1048588, 1, 1, 1048594, 1, 1, 1114112, 1, 1, 1114118, 1, 1, 1114124, 1, 1, 1114130, 1, 1, 1179648, 1, 65538, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 196609, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 196609, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 65539 )

[node name="EntityManager" type="Node2D" parent="GridManager"]
position = Vector2( 168, 24 )

[node name="FOVManager" type="Control" parent="GridManager"]
visible = false
modulate = Color( 0.137255, 0.129412, 0.239216, 1 )
margin_left = 184.0
margin_top = 40.0
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="FOVSquare1" type="ColorRect" parent="GridManager/FOVManager"]
material = SubResource( 1 )
margin_right = 80.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOVSquare2" type="ColorRect" parent="GridManager/FOVManager"]
material = SubResource( 2 )
margin_left = 96.0
margin_right = 176.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOVSquare3" type="ColorRect" parent="GridManager/FOVManager"]
material = SubResource( 3 )
margin_left = 192.0
margin_right = 272.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOVSquare4" type="ColorRect" parent="GridManager/FOVManager"]
material = SubResource( 4 )
margin_top = 96.0
margin_right = 80.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOVSquare5" type="ColorRect" parent="GridManager/FOVManager"]
material = SubResource( 5 )
margin_left = 96.0
margin_top = 96.0
margin_right = 176.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOVSquare6" type="ColorRect" parent="GridManager/FOVManager"]
material = SubResource( 6 )
margin_left = 192.0
margin_top = 96.0
margin_right = 272.0
margin_bottom = 176.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOVSquare7" type="ColorRect" parent="GridManager/FOVManager"]
material = SubResource( 7 )
margin_top = 192.0
margin_right = 80.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOVSquare8" type="ColorRect" parent="GridManager/FOVManager"]
material = SubResource( 8 )
margin_left = 96.0
margin_top = 192.0
margin_right = 176.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FOVSquare9" type="ColorRect" parent="GridManager/FOVManager"]
material = SubResource( 9 )
margin_left = 192.0
margin_top = 192.0
margin_right = 272.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="DungeonGenerator" type="Node" parent="."]
script = ExtResource( 6 )

[node name="TurnLoop" type="Node" parent="."]
script = ExtResource( 7 )
